Opg. 2: Ændret ListMethods.cs til static og kalder den statiske klasse i InsertCodeHere.cs.

--- a/StaticExamples/StaticExamples.csproj
+++ b/StaticExamples/StaticExamples.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Beregn.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="InsertCodeHere.cs" />
     <Compile Include="ListMethods.cs" />
